# outlook-pst-rs

./: .copilot-instructions.md  .gitignore  Cargo.toml
.github/agents/: copilot-instructions.md
.github/workflows/: release-plz.yml  release.yml  rust.yml
.specify/memory/: constitution.md
crates/compressed-rtf/: CHANGELOG.md  Cargo.toml
crates/compressed-rtf/src/: lib.rs
crates/outlook-pst-cli/: Cargo.toml  README.md
crates/outlook-pst-cli/src/: benchmark.rs  iterate_emails.rs  main.rs
crates/outlook-pst-cli/src/args/: mod.rs
crates/outlook-pst-cli/src/encoding/: mod.rs
crates/pst/: CHANGELOG.md  Cargo.toml
crates/pst-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/pst-cli/examples/: basic_export.rs  batch_export.rs  html_search_inline_export.rs  simple_usage.rs
crates/pst-cli/src/: error.rs  lib.rs  main.rs
crates/pst-cli/src/cli/: mod.rs  progress.rs
crates/pst-cli/src/duplicate/: hash.rs  mod.rs
crates/pst-cli/src/export/: conversation.rs  csv.rs  exporter.rs  html.rs  metadata.rs  mod.rs
crates/pst-cli/src/filter/: email.rs  keyword.rs  mod.rs
crates/pst-cli/src/list/: mod.rs
crates/pst-cli/tests/: bench.rs  integration.rs  unit.rs
crates/pst-cli/tests/bench/: conversations_bench.rs  export_bench.rs  html_export_bench.rs  memory_bench.rs
crates/pst-cli/tests/fixtures/: README.md
crates/pst-cli/tests/integration/: conversation_fallback_test.rs  conversation_grouping_test.rs  conversation_mixed_layout_test.rs  export_test.rs  filtering_test.rs  list_test.rs
crates/pst-cli/tests/unit/: attachment_test.rs  conversation_grouping_test.rs  conversation_key_derivation_test.rs  conversation_metadata_test.rs  csv_test.rs  duplicate_test.rs  email_test.rs  error_handling_test.rs  html_test.rs  keyword_test.rs  list_test.rs  numbering_test.rs
crates/pst/src/ltp/: prop_context.rs
crates/pst/src/messaging/: attachment.rs  message.rs
scripts/: localize_cid_images.py
specs/001-conversation-export-grouping/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-conversation-export-grouping/checklists/: requirements.md
specs/001-conversation-export-grouping/contracts/: cli-interface.md
specs/001-pst-cli-tool/: PHASE-1-2-SUMMARY.md  PHASE-3-PROGRESS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pst-cli-tool/checklists/: requirements.md
specs/001-pst-cli-tool/contracts/: cli-interface.md
specs/002-conversation-export-grouping/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-conversation-export-grouping/checklists/: requirements.md
specs/003-html-search-inline-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-html-search-inline-export/checklists/: requirements.md
specs/003-html-search-inline-export/contracts/: cli-interface.md
