[workspace]
members = ["crates/compressed-rtf", "crates/pst", "crates/pst-cli"]
resolver = "2"

[patch.crates-io]
compressed-rtf = { path = "crates/compressed-rtf" }

[workspace.package]
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/microsoft/outlook-pst-rs"
license = "MIT"
keywords = ["win32", "outlook", "mapi"]
categories = ["os::windows-apis"]

[workspace.dependencies]
compressed-rtf = "1"

anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
codepage-strings = "1"
crossterm = "0.29"
ratatui = "0.29"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Correctness
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }

# Performance
perf = "warn"

# Style and complexity
style = "warn"
complexity = "warn"
pedantic = "warn"

# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"

