[package]
name = "compressed-rtf"
description = "[MS-OXRTFCP]: Rich Text Format (RTF) Compression Algorithm"
version = "1.0.1"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
byteorder.workspace = true
thiserror.workspace = true
